--- a/special/higher/24.html
+++ b/special/higher/24.html
@@ -1,181 +1,215 @@
 <!DOCTYPE html>
 <html lang="uk">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" type="text/css" href="../../css/style.css" />
-		<link rel="stylesheet" type="text/css" href="../../css/media.css" />
-		<link rel="icon" href="../../img/favicon/1.png" type="image/png" />
-		<title>ЦНТУ</title>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="../../css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/media.css" />
+    <link rel="icon" href="../../img/favicon/1.png" type="image/png" />
+    <title>ЦНТУ</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  </head>
 
-	<body>
-		<header class="header">
-			<div class="container">
-				<div class="header__inner">
-					<div class="header__logo">
-						<a href="http://www.kntu.kr.ua/"
-							><img src="../../img/Gerb.webp" alt="#"
-						/></a>
-						<a href="http://www.kntu.kr.ua/"
-							><h1 class="header__title">
-								Центральноукраїнський національний<br />
-								технічний університет
-							</h1></a
-						>
-					</div>
-					<nav class="nav" id="nav">
-						<a class="nav__link" href="http://www.kntu.kr.ua/?view=univer&id=1"
-							>Університет</a
-						>
-						<a class="nav__link" href="http://www.kntu.kr.ua/?view=abitur&id=1"
-							>Абітурієнту</a
-						>
-						<a class="nav__link" href="http://www.kntu.kr.ua/?view=fakult&id=1"
-							>Факультети</a
-						>
-						<a class="nav__link" href="http://www.kntu.kr.ua/?view=science&id=1"
-							>Наукова діяльність</a
-						>
-						<a
-							class="nav__link"
-							href="http://www.kntu.kr.ua/?view=science&id=19"
-							>Аспіранту</a
-						>
-						<a class="nav__link" href="http://www.kntu.kr.ua/?view=stud&id=1"
-							>Студенту</a
-						>
-						<a class="nav__link" href="http://moodle.kntu.kr.ua/"
-							>Дист. навчання</a
-						>
-					</nav>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <div class="header__logo">
+            <a href="http://www.kntu.kr.ua/"
+              ><img src="../../img/Gerb.webp" alt="#"
+            /></a>
+            <a href="http://www.kntu.kr.ua/"
+              ><h1 class="header__title">
+                Центральноукраїнський національний<br />
+                технічний університет
+              </h1></a
+            >
+          </div>
+          <nav class="nav" id="nav">
+            <a class="nav__link" href="http://www.kntu.kr.ua/?view=univer&id=1"
+              >Університет</a
+            >
+            <a class="nav__link" href="http://www.kntu.kr.ua/?view=abitur&id=1"
+              >Абітурієнту</a
+            >
+            <a class="nav__link" href="http://www.kntu.kr.ua/?view=fakult&id=1"
+              >Факультети</a
+            >
+            <a class="nav__link" href="http://www.kntu.kr.ua/?view=science&id=1"
+              >Наукова діяльність</a
+            >
+            <a
+              class="nav__link"
+              href="http://www.kntu.kr.ua/?view=science&id=19"
+              >Аспіранту</a
+            >
+            <a class="nav__link" href="http://www.kntu.kr.ua/?view=stud&id=1"
+              >Студенту</a
+            >
+            <a class="nav__link" href="http://moodle.kntu.kr.ua/"
+              >Дист. навчання</a
+            >
+          </nav>
 
-					<button class="burger" type="button" id="navToggle">
-						<span class="burger__item">Menu</span>
-					</button>
-				</div>
-			</div>
-		</header>
-		<div class="container__small">
-			<div class="flex__row">
-				<div class="flex__inner">
-					<div class="flex__cart">
-						<div class="flex__center__row">
-							<div class="flex__item">
-								<a href="https://kntuua.github.io/University/abitur/1.html">
-									<i class="fas fa-arrow-circle-left"></i>
-								</a>
-								<a href="http://kbpz.kntu.kr.ua/" target="_blank">
-									<i class="fas fa-university"></i>
-								</a>
-								<a
-									href="https://m.facebook.com/groups/itkntu/"
-									target="_blank"
-								>
-									<i class="fab fa-facebook-square"></i>
-								</a>
-							</div>
-							<div class="flex__item">
-								<div class="flex__center">
-									<div class="flex__subtitle">Номер: 122</div>
-									<div class="flex__subtitle">Назва спеціальності:</div>
-									<h1 class="flex__title">Комп’ютерні науки</h1>
-								</div>
-							</div>
-						</div>
-						<div class="flex__img">
-							<img
-								class="p-auto"
-								src="../../img/addSpecialties/24/1.webp"
-								alt="#"
-							/>
-							<img
-								class="p-auto"
-								src="../../img/addSpecialties/24/2.webp"
-								alt="#"
-							/>
-							<img
-								class="p-auto"
-								src="../../img/addSpecialties/24/3.webp"
-								alt="#"
-							/>
-						</div>
-						<div class="flex__text">
-							Магістри за освітньою програмою “Комп’ютерні науки” <a target="_blank" href="http://kbpz.kntu.kr.ua/122mag/">дізнатись більше</a>  готуються для роботи в галузі інформаційної аналітики для усіх видів економічної, політичної та соціальної сфер діяльності, здатних забезпечити генерацію нових знань та інформаційну підтримку прийняття рішень.
-							Поглиблені теоретичні та практичні знання в галузі комп’ютерних наук з акцентом на формування навичок створення та практичної реалізації інновацій в галузі інформаційних технологій для різних галузей людської діяльності. Можливість спеціалізації в напрямках захисту інформаційних технологій.
-							Інтегральна компетентність: здатність розв’язувати складні спеціалізовані задачі та практичні проблеми в галузі комп’ютерних наук або у процесі навчання, що передбачає застосування теорій та методів комп’ютерних наук, інформаційних технологій і характеризується комплексністю та невизначеністю умов.
-							Здобувачі вищої освіти за ІТ-спеціальністю “Комп’ютерні науки” <a target="_blank" href="http://kbpz.kntu.kr.ua/pravstyp/">дізнатись більше</a> під час навчання вивчають новітні IT-технології й мови програмування, серед яких Python, Visual C#, С/С++, Microsoft DOT NET, Framework Java, Android API, HTML, CSS, JavaScript, PHP, MySQL, ASP.NET, WordPress, DrupalSQL, XML, Paradox, Interbase, Oracle і інші.
-							Посади, на яких зможуть працювати випускники згідно з ДК 003:2010: адміністратор бази даних, адміністратор даних, адміністратор доступу, адміністратор системи, аналітик комп’ютерних систем, аналітик операційного та прикладного програмного забезпечення, інженер з програмного забезпечення комп’ютерів, інженер-програміст, програміст (база даних), програміст прикладний, інженер із застосування комп’ютерів.
-							й на інших посадах сфери IT <a target="_blank" href="http://kbpz.kntu.kr.ua/vupysk/">дізнатись більше</a>.
-							Магістр може продовжувати освіту за третім (освітньо-науковим) рівнем вищої освіти чи за програмою магістратури з інших галузей знань, а також підвищувати кваліфікацію та отримувати додаткову післядипломну освіту.
+          <button class="burger" type="button" id="navToggle">
+            <span class="burger__item">Menu</span>
+          </button>
+        </div>
+      </div>
+    </header>
+    <div class="container__small">
+      <div class="flex__row">
+        <div class="flex__inner">
+          <div class="flex__cart">
+            <div class="flex__center__row">
+              <div class="flex__item">
+                <a href="https://kntuua.github.io/University/abitur/1.html">
+                  <i class="fas fa-arrow-circle-left"></i>
+                </a>
+                <a href="http://kbpz.kntu.kr.ua/" target="_blank">
+                  <i class="fas fa-university"></i>
+                </a>
+                <a href="https://m.facebook.com/groups/itkntu/" target="_blank">
+                  <i class="fab fa-facebook-square"></i>
+                </a>
+              </div>
+              <div class="flex__item">
+                <div class="flex__center">
+                  <div class="flex__subtitle">Номер: 122</div>
+                  <div class="flex__subtitle">Назва спеціальності:</div>
+                  <h1 class="flex__title">Комп’ютерні науки</h1>
+                </div>
+              </div>
+            </div>
+            <div class="flex__img">
+              <img
+                class="p-auto"
+                src="../../img/addSpecialties/24/1.webp"
+                alt="#"
+              />
+              <img
+                class="p-auto"
+                src="../../img/addSpecialties/24/2.webp"
+                alt="#"
+              />
+              <img
+                class="p-auto"
+                src="../../img/addSpecialties/24/3.webp"
+                alt="#"
+              />
+            </div>
+            <div class="flex__text">
+              Магістри за освітньою програмою “Комп’ютерні науки”
+              <a target="_blank" href="http://kbpz.kntu.kr.ua/122mag/"
+                >дізнатись більше</a
+              >
+              готуються для роботи в галузі інформаційної аналітики для усіх
+              видів економічної, політичної та соціальної сфер діяльності,
+              здатних забезпечити генерацію нових знань та інформаційну
+              підтримку прийняття рішень. Поглиблені теоретичні та практичні
+              знання в галузі комп’ютерних наук з акцентом на формування навичок
+              створення та практичної реалізації інновацій в галузі
+              інформаційних технологій для різних галузей людської діяльності.
+              Можливість спеціалізації в напрямках захисту інформаційних
+              технологій. Інтегральна компетентність: здатність розв’язувати
+              складні спеціалізовані задачі та практичні проблеми в галузі
+              комп’ютерних наук або у процесі навчання, що передбачає
+              застосування теорій та методів комп’ютерних наук, інформаційних
+              технологій і характеризується комплексністю та невизначеністю
+              умов. Здобувачі вищої освіти за ІТ-спеціальністю “Комп’ютерні
+              науки”
+              <a target="_blank" href="http://kbpz.kntu.kr.ua/pravstyp/"
+                >дізнатись більше</a
+              >
+              під час навчання вивчають новітні IT-технології й мови
+              програмування, серед яких Python, Visual C#, С/С++, Microsoft DOT
+              NET, Framework Java, Android API, HTML, CSS, JavaScript, PHP,
+              MySQL, ASP.NET, WordPress, DrupalSQL, XML, Paradox, Interbase,
+              Oracle і інші. Посади, на яких зможуть працювати випускники згідно
+              з ДК 003:2010: адміністратор бази даних, адміністратор даних,
+              адміністратор доступу, адміністратор системи, аналітик
+              комп’ютерних систем, аналітик операційного та прикладного
+              програмного забезпечення, інженер з програмного забезпечення
+              комп’ютерів, інженер-програміст, програміст (база даних),
+              програміст прикладний, інженер із застосування комп’ютерів. й на
+              інших посадах сфери IT
+              <a target="_blank" href="http://kbpz.kntu.kr.ua/vupysk/"
+                >дізнатись більше</a
+              >. Магістр може продовжувати освіту за третім (освітньо-науковим)
+              рівнем вищої освіти чи за програмою магістратури з інших галузей
+              знань, а також підвищувати кваліфікацію та отримувати додаткову
+              післядипломну освіту. Будь айтішним! Вступай на ІТ-спеціальність
+              ЦНТУ
+              <a target="_blank" href="http://kbpz.kntu.kr.ua/infbyk/"
+                >дізнатись більше</a
+              >.
+            </div>
+            <div class="flex__center mt-20">
+              <a
+                href="https://docs.google.com/forms/d/1tUEB7YXicGwxzvaGyFRLxXtBv9DNw-shu2h2DacURsc/edit?usp=sharing"
+                class="custom-btn btn-15 btn--p"
+                >Заповнити форму</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__inner">
+          <div class="footer__block">
+            <h4 class="footer__title">
+              Приймальна комісія працює щодня, крім суботи та неділі.
+            </h4>
+            <div class="footer__tel">
+              <div>
+                Телефони приймальної комісії: (095) 078-59-00, (0522) 55-93-13
+              </div>
+              <div>
+                Телефон центру довузівської підготовки: (095) 086-24-57 (0522)
+                55-50-18
+              </div>
+            </div>
+          </div>
+          <div class="footer__block">
+            <h4 class="footer__title">«ЦНТУ» в соцмережах:</h4>
+            <a
+              href="https://www.facebook.com/CNTU.kr.ua/?ref=bookmarks"
+              target="_blank"
+              ><i class="fab fa-facebook"></i
+            ></a>
+            <a href="https://twitter.com/CNTU1929" target="_blank"
+              ><i class="fab fa-twitter"></i
+            ></a>
+            <a
+              href="https://www.youtube.com/channel/UCOqbluXSF1GpiwkOOWkyydQ"
+              target="_blank"
+              ><i class="fab fa-youtube"></i
+            ></a>
+            <a href="https://www.instagram.com/cntu.kr.ua/" target="_blank"
+              ><i class="fab fa-instagram"></i
+            ></a>
+          </div>
+          <div class="footer__block">
+            <h4 class="footer__title">
+              © <span class="year"></span> «ЦНТУ» Всі права захищено.
+            </h4>
+            <div class="footer__text">
+              <p>
+                Використання матеріалів цього сайту можливе тільки з посиланням
+                на джерело.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
-							Будь айтішним! Вступай на ІТ-спеціальність ЦНТУ <a target="_blank" href="http://kbpz.kntu.kr.ua/infbyk/">дізнатись більше</a>.
-						</div>
-						<div class="flex__center mt-20">
-							<a
-								href="https://docs.google.com/forms/d/1tUEB7YXicGwxzvaGyFRLxXtBv9DNw-shu2h2DacURsc/edit?usp=sharing"
-								class="custom-btn btn-15 btn--p"
-								>Заповнити форму</a
-							>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<footer class="footer">
-			<div class="container">
-				<div class="footer__inner">
-					<div class="footer__block">
-						<h4 class="footer__title">
-							Приймальна комісія працює щодня, крім суботи та неділі.
-						</h4>
-						<div class="footer__tel">
-							<div>
-								Телефони приймальної комісії: (095) 078-59-00, (0522) 55-93-13
-							</div>
-							<div>
-								Телефон центру довузівської підготовки: (095) 086-24-57 (0522)
-								55-50-18
-							</div>
-						</div>
-					</div>
-					<div class="footer__block">
-						<h4 class="footer__title">«ЦНТУ» в соцмережах:</h4>
-						<a
-							href="https://www.facebook.com/CNTU.kr.ua/?ref=bookmarks"
-							target="_blank"
-							><i class="fab fa-facebook"></i
-						></a>
-						<a href="https://twitter.com/CNTU1929" target="_blank"
-							><i class="fab fa-twitter"></i
-						></a>
-						<a
-							href="https://www.youtube.com/channel/UCOqbluXSF1GpiwkOOWkyydQ"
-							target="_blank"
-							><i class="fab fa-youtube"></i
-						></a>
-						<a href="https://www.instagram.com/cntu.kr.ua/" target="_blank"
-							><i class="fab fa-instagram"></i
-						></a>
-					</div>
-					<div class="footer__block">
-						<h4 class="footer__title">© 2022 «ЦНТУ» Всі права захищено.</h4>
-						<div class="footer__text">
-							<p>
-								Використання матеріалів цього сайту можливе тільки з посиланням
-								на джерело.
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</footer>
-
-		<script src="../../js/app.js"></script>
-		<script
-			src="https://kit.fontawesome.com/021c6d66dc.js"
-			crossorigin="anonymous"
-		></script>
-	</body>
+    <script src="../../js/app.js"></script>
+    <script
+      src="https://kit.fontawesome.com/021c6d66dc.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
