--- a/special/middle/11.html
+++ b/special/middle/11.html
@@ -183,7 +183,9 @@
             ></a>
           </div>
           <div class="footer__block">
-            <h4 class="footer__title">© 2022 «ЦНТУ» Всі права захищено.</h4>
+            <h4 class="footer__title">
+              © <span class="year"></span> «ЦНТУ» Всі права захищено.
+            </h4>
             <div class="footer__text">
               <p>
                 Використання матеріалів цього сайту можливе тільки з посиланням
