--- a/special/higher/2.html
+++ b/special/higher/2.html
@@ -1,195 +1,201 @@
 <!DOCTYPE html>
 <html lang="uk">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" type="text/css" href="../../css/style.css" />
-		<link rel="stylesheet" type="text/css" href="../../css/media.css" />
-		<link rel="icon" href="../../img/favicon/1.png" type="image/png" />
-		<title>ЦНТУ</title>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="../../css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/media.css" />
+    <link rel="icon" href="../../img/favicon/1.png" type="image/png" />
+    <title>ЦНТУ</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  </head>
 
-	<body>
-		<header class="header">
-			<div class="container">
-				<div class="header__inner">
-					<div class="header__logo">
-						<a href="http://www.kntu.kr.ua/"
-							><img src="../../img/Gerb.webp" alt="#"
-						/></a>
-						<a href="http://www.kntu.kr.ua/"
-							><h1 class="header__title">
-								Центральноукраїнський національний<br />
-								технічний університет
-							</h1></a
-						>
-					</div>
-					<nav class="nav" id="nav">
-						<a class="nav__link" href="http://www.kntu.kr.ua/?view=univer&id=1"
-							>Університет</a
-						>
-						<a class="nav__link" href="http://www.kntu.kr.ua/?view=abitur&id=1"
-							>Абітурієнту</a
-						>
-						<a class="nav__link" href="http://www.kntu.kr.ua/?view=fakult&id=1"
-							>Факультети</a
-						>
-						<a class="nav__link" href="http://www.kntu.kr.ua/?view=science&id=1"
-							>Наукова діяльність</a
-						>
-						<a
-							class="nav__link"
-							href="http://www.kntu.kr.ua/?view=science&id=19"
-							>Аспіранту</a
-						>
-						<a class="nav__link" href="http://www.kntu.kr.ua/?view=stud&id=1"
-							>Студенту</a
-						>
-						<a class="nav__link" href="http://moodle.kntu.kr.ua/"
-							>Дист. навчання</a
-						>
-					</nav>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <div class="header__logo">
+            <a href="http://www.kntu.kr.ua/"
+              ><img src="../../img/Gerb.webp" alt="#"
+            /></a>
+            <a href="http://www.kntu.kr.ua/"
+              ><h1 class="header__title">
+                Центральноукраїнський національний<br />
+                технічний університет
+              </h1></a
+            >
+          </div>
+          <nav class="nav" id="nav">
+            <a class="nav__link" href="http://www.kntu.kr.ua/?view=univer&id=1"
+              >Університет</a
+            >
+            <a class="nav__link" href="http://www.kntu.kr.ua/?view=abitur&id=1"
+              >Абітурієнту</a
+            >
+            <a class="nav__link" href="http://www.kntu.kr.ua/?view=fakult&id=1"
+              >Факультети</a
+            >
+            <a class="nav__link" href="http://www.kntu.kr.ua/?view=science&id=1"
+              >Наукова діяльність</a
+            >
+            <a
+              class="nav__link"
+              href="http://www.kntu.kr.ua/?view=science&id=19"
+              >Аспіранту</a
+            >
+            <a class="nav__link" href="http://www.kntu.kr.ua/?view=stud&id=1"
+              >Студенту</a
+            >
+            <a class="nav__link" href="http://moodle.kntu.kr.ua/"
+              >Дист. навчання</a
+            >
+          </nav>
 
-					<button class="burger" type="button" id="navToggle">
-						<span class="burger__item">Menu</span>
-					</button>
-				</div>
-			</div>
-		</header>
-		<div class="container__small">
-			<div class="flex__row">
-				<div class="flex__inner">
-					<div class="flex__cart">
-						<div class="flex__center__row">
-							<div class="flex__item">
-								<a href="https://kntuua.github.io/University/abitur/2.html">
-									<i class="fas fa-arrow-circle-left"></i>
-								</a>
-								<a href="http://snd.kntu.kr.ua/" target="_blank">
-									<i class="fas fa-university"></i>
-								</a>
-								<a href="https://www.facebook.com/KSNInform" target="_blank">
-									<i class="fab fa-facebook-square"></i>
-								</a>
-							</div>
-							<div class="flex__item">
-								<div class="flex__center">
-									<div class="flex__subtitle">Номер: 032</div>
-									<div class="flex__subtitle">Назва спеціальності:</div>
-									<h1 class="flex__title">Історія та археологія</h1>
-								</div>
-							</div>
-						</div>
-						<div class="flex__img">
-							<img
-								class="p-auto"
-								src="../../img/addSpecialties/2/1.webp"
-								alt="#"
-							/>
-							<img
-								class="p-auto"
-								src="../../img/addSpecialties/2/2.webp"
-								alt="#"
-							/>
-							<img
-								class="p-auto"
-								src="../../img/addSpecialties/2/3.webp"
-								alt="#"
-							/>
-						</div>
-						<div class="flex__text">
-							Історія та археологія – надзвичайно цікава та романтична
-							спеціальність, яка дозволяє поринути у захопливий світ минулого,
-							зрозуміти багато того, що відбувається сьогодні. Освітня програма
-							передбачає поєднання загальногуманітарної, професійної й
-							практичної складових, забезпечуючи ґрунтовне опановування
-							фундаментальними знаннями з історії та археології, навичками
-							наукового дослідження. Освітня програма базується на сучасних
-							наукових знаннях про цілі та цінності загальної історичної освіти,
-							спрямована на професійно-дослідницьку діяльність у відповідних
-							інституціях (музеї, науково-дослідні інститути, фонди, громадські
-							організації, видавництва тощо). Освітня програма гармонійно
-							поєднує теоретичні й практичні заняття з етнологічною,
-							археологічною, музейною, архівною та науково-дослідною практиками.
-							Центральноукраїнський національний технічний університет
-							забезпечує студентів-істориків можливістю поглибленого вивчення
-							англійської мови; стажування за кордоном та участі у міжнародних
-							проєктах. Обрана спеціальність – «Історія та археологія» –
-							дозволить реалізувати себе на таких посадах: археолог;
-							археолог-музеєзнавець; архівіст; експерт археологічних пам’яток;
-							викладач історії; працівник науково-дослідної установи;
-							пам’яткоохоронець; менеджер архівних та державних установ.
-							Історик, який по-справжньому любить свою спеціальність, має
-							можливість реалізувати мінімум 7 кар’єрних траєкторій. Траєкторія
-							№1. Викладання історії. Траєкторія №2. Наукова діяльність.
-							Траєкторія №3. Популяризація історії Траєкторія №4. Робота в
-							туристичній сфері. Траєкторія №5. Робота в архіві. Траєкторія №6.
-							Музейна справа. Траєкторія №7. Фриланс. На кафедрі функціонує
-							аспірантура з історії та археології, що дає можливість здобути
-							науковий ступінь доктора філософії зі спеціальності 032 «Історія
-							та археологія».
-						</div>
-						<div class="flex__center mt-20">
-							<a href="https://forms.gle/zX1vUk6Y4K6aQtfV8" class="custom-btn btn-15 btn--p">Заповнити форму</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<footer class="footer">
-			<div class="container">
-				<div class="footer__inner">
-					<div class="footer__block">
-						<h4 class="footer__title">
-							Приймальна комісія працює щодня, крім суботи та неділі.
-						</h4>
-						<div class="footer__tel">
-							<div>
-								Телефони приймальної комісії: (095) 078-59-00, (0522) 55-93-13
-							</div>
-							<div>
-								Телефон центру довузівської підготовки: (095) 086-24-57 (0522)
-								55-50-18
-							</div>
-						</div>
-					</div>
-					<div class="footer__block">
-						<h4 class="footer__title">«ЦНТУ» в соцмережах:</h4>
-						<a
-							href="https://www.facebook.com/CNTU.kr.ua/?ref=bookmarks"
-							target="_blank"
-							><i class="fab fa-facebook"></i
-						></a>
-						<a href="https://twitter.com/CNTU1929" target="_blank"
-							><i class="fab fa-twitter"></i
-						></a>
-						<a
-							href="https://www.youtube.com/channel/UCOqbluXSF1GpiwkOOWkyydQ"
-							target="_blank"
-							><i class="fab fa-youtube"></i
-						></a>
-						<a href="https://www.instagram.com/cntu.kr.ua/" target="_blank"
-							><i class="fab fa-instagram"></i
-						></a>
-					</div>
-					<div class="footer__block">
-						<h4 class="footer__title">© 2022 «ЦНТУ» Всі права захищено.</h4>
-						<div class="footer__text">
-							<p>
-								Використання матеріалів цього сайту можливе тільки з посиланням
-								на джерело.
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</footer>
+          <button class="burger" type="button" id="navToggle">
+            <span class="burger__item">Menu</span>
+          </button>
+        </div>
+      </div>
+    </header>
+    <div class="container__small">
+      <div class="flex__row">
+        <div class="flex__inner">
+          <div class="flex__cart">
+            <div class="flex__center__row">
+              <div class="flex__item">
+                <a href="https://kntuua.github.io/University/abitur/2.html">
+                  <i class="fas fa-arrow-circle-left"></i>
+                </a>
+                <a href="http://snd.kntu.kr.ua/" target="_blank">
+                  <i class="fas fa-university"></i>
+                </a>
+                <a href="https://www.facebook.com/KSNInform" target="_blank">
+                  <i class="fab fa-facebook-square"></i>
+                </a>
+              </div>
+              <div class="flex__item">
+                <div class="flex__center">
+                  <div class="flex__subtitle">Номер: 032</div>
+                  <div class="flex__subtitle">Назва спеціальності:</div>
+                  <h1 class="flex__title">Історія та археологія</h1>
+                </div>
+              </div>
+            </div>
+            <div class="flex__img">
+              <img
+                class="p-auto"
+                src="../../img/addSpecialties/2/1.webp"
+                alt="#"
+              />
+              <img
+                class="p-auto"
+                src="../../img/addSpecialties/2/2.webp"
+                alt="#"
+              />
+              <img
+                class="p-auto"
+                src="../../img/addSpecialties/2/3.webp"
+                alt="#"
+              />
+            </div>
+            <div class="flex__text">
+              Історія та археологія – надзвичайно цікава та романтична
+              спеціальність, яка дозволяє поринути у захопливий світ минулого,
+              зрозуміти багато того, що відбувається сьогодні. Освітня програма
+              передбачає поєднання загальногуманітарної, професійної й
+              практичної складових, забезпечуючи ґрунтовне опановування
+              фундаментальними знаннями з історії та археології, навичками
+              наукового дослідження. Освітня програма базується на сучасних
+              наукових знаннях про цілі та цінності загальної історичної освіти,
+              спрямована на професійно-дослідницьку діяльність у відповідних
+              інституціях (музеї, науково-дослідні інститути, фонди, громадські
+              організації, видавництва тощо). Освітня програма гармонійно
+              поєднує теоретичні й практичні заняття з етнологічною,
+              археологічною, музейною, архівною та науково-дослідною практиками.
+              Центральноукраїнський національний технічний університет
+              забезпечує студентів-істориків можливістю поглибленого вивчення
+              англійської мови; стажування за кордоном та участі у міжнародних
+              проєктах. Обрана спеціальність – «Історія та археологія» –
+              дозволить реалізувати себе на таких посадах: археолог;
+              археолог-музеєзнавець; архівіст; експерт археологічних пам’яток;
+              викладач історії; працівник науково-дослідної установи;
+              пам’яткоохоронець; менеджер архівних та державних установ.
+              Історик, який по-справжньому любить свою спеціальність, має
+              можливість реалізувати мінімум 7 кар’єрних траєкторій. Траєкторія
+              №1. Викладання історії. Траєкторія №2. Наукова діяльність.
+              Траєкторія №3. Популяризація історії Траєкторія №4. Робота в
+              туристичній сфері. Траєкторія №5. Робота в архіві. Траєкторія №6.
+              Музейна справа. Траєкторія №7. Фриланс. На кафедрі функціонує
+              аспірантура з історії та археології, що дає можливість здобути
+              науковий ступінь доктора філософії зі спеціальності 032 «Історія
+              та археологія».
+            </div>
+            <div class="flex__center mt-20">
+              <a
+                href="https://forms.gle/zX1vUk6Y4K6aQtfV8"
+                class="custom-btn btn-15 btn--p"
+                >Заповнити форму</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__inner">
+          <div class="footer__block">
+            <h4 class="footer__title">
+              Приймальна комісія працює щодня, крім суботи та неділі.
+            </h4>
+            <div class="footer__tel">
+              <div>
+                Телефони приймальної комісії: (095) 078-59-00, (0522) 55-93-13
+              </div>
+              <div>
+                Телефон центру довузівської підготовки: (095) 086-24-57 (0522)
+                55-50-18
+              </div>
+            </div>
+          </div>
+          <div class="footer__block">
+            <h4 class="footer__title">«ЦНТУ» в соцмережах:</h4>
+            <a
+              href="https://www.facebook.com/CNTU.kr.ua/?ref=bookmarks"
+              target="_blank"
+              ><i class="fab fa-facebook"></i
+            ></a>
+            <a href="https://twitter.com/CNTU1929" target="_blank"
+              ><i class="fab fa-twitter"></i
+            ></a>
+            <a
+              href="https://www.youtube.com/channel/UCOqbluXSF1GpiwkOOWkyydQ"
+              target="_blank"
+              ><i class="fab fa-youtube"></i
+            ></a>
+            <a href="https://www.instagram.com/cntu.kr.ua/" target="_blank"
+              ><i class="fab fa-instagram"></i
+            ></a>
+          </div>
+          <div class="footer__block">
+            <h4 class="footer__title">
+              © <span class="year"></span> «ЦНТУ» Всі права захищено.
+            </h4>
+            <div class="footer__text">
+              <p>
+                Використання матеріалів цього сайту можливе тільки з посиланням
+                на джерело.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
-		<script src="../../js/app.js"></script>
-		<script
-			src="https://kit.fontawesome.com/021c6d66dc.js"
-			crossorigin="anonymous"
-		></script>
-	</body>
+    <script src="../../js/app.js"></script>
+    <script
+      src="https://kit.fontawesome.com/021c6d66dc.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
