--- a/special/middle/19.html
+++ b/special/middle/19.html
@@ -1,215 +1,217 @@
 <!DOCTYPE html>
 <html lang="uk">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" type="text/css" href="../../css/style.css" />
-		<link rel="stylesheet" type="text/css" href="../../css/media.css" />
-		<link rel="icon" href="../../img/favicon/1.png" type="image/png" />
-		<title>ЦНТУ</title>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="../../css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/media.css" />
+    <link rel="icon" href="../../img/favicon/1.png" type="image/png" />
+    <title>ЦНТУ</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  </head>
 
-	<body>
-		<header class="header">
-			<div class="container">
-				<div class="header__inner">
-					<div class="header__logo">
-						<a href="http://www.kntu.kr.ua/"
-							><img src="../../img/Gerb.webp" alt="#"
-						/></a>
-						<a href="http://www.kntu.kr.ua/"
-							><h1 class="header__title">
-								Центральноукраїнський національний<br />
-								технічний університет
-							</h1></a
-						>
-					</div>
-					<nav class="nav" id="nav">
-						<a class="nav__link" href="http://www.kntu.kr.ua/?view=univer&id=1"
-							>Університет</a
-						>
-						<a class="nav__link" href="http://www.kntu.kr.ua/?view=abitur&id=1"
-							>Абітурієнту</a
-						>
-						<a class="nav__link" href="http://www.kntu.kr.ua/?view=fakult&id=1"
-							>Факультети</a
-						>
-						<a class="nav__link" href="http://www.kntu.kr.ua/?view=science&id=1"
-							>Наукова діяльність</a
-						>
-						<a
-							class="nav__link"
-							href="http://www.kntu.kr.ua/?view=science&id=19"
-							>Аспіранту</a
-						>
-						<a class="nav__link" href="http://www.kntu.kr.ua/?view=stud&id=1"
-							>Студенту</a
-						>
-						<a class="nav__link" href="http://moodle.kntu.kr.ua/"
-							>Дист. навчання</a
-						>
-					</nav>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <div class="header__logo">
+            <a href="http://www.kntu.kr.ua/"
+              ><img src="../../img/Gerb.webp" alt="#"
+            /></a>
+            <a href="http://www.kntu.kr.ua/"
+              ><h1 class="header__title">
+                Центральноукраїнський національний<br />
+                технічний університет
+              </h1></a
+            >
+          </div>
+          <nav class="nav" id="nav">
+            <a class="nav__link" href="http://www.kntu.kr.ua/?view=univer&id=1"
+              >Університет</a
+            >
+            <a class="nav__link" href="http://www.kntu.kr.ua/?view=abitur&id=1"
+              >Абітурієнту</a
+            >
+            <a class="nav__link" href="http://www.kntu.kr.ua/?view=fakult&id=1"
+              >Факультети</a
+            >
+            <a class="nav__link" href="http://www.kntu.kr.ua/?view=science&id=1"
+              >Наукова діяльність</a
+            >
+            <a
+              class="nav__link"
+              href="http://www.kntu.kr.ua/?view=science&id=19"
+              >Аспіранту</a
+            >
+            <a class="nav__link" href="http://www.kntu.kr.ua/?view=stud&id=1"
+              >Студенту</a
+            >
+            <a class="nav__link" href="http://moodle.kntu.kr.ua/"
+              >Дист. навчання</a
+            >
+          </nav>
 
-					<button class="burger" type="button" id="navToggle">
-						<span class="burger__item">Menu</span>
-					</button>
-				</div>
-			</div>
-		</header>
-		<div class="container__small">
-			<div class="flex__row">
-				<div class="flex__inner">
-					<div class="flex__cart">
-						<div class="flex__center__row">
-							<div class="flex__item">
-								<a href="https://kntuua.github.io/University/abitur/1.html">
-									<i class="fas fa-arrow-circle-left"></i>
-								</a>
-								<a href="#popup">
-									<i class="fas fa-university"></i>
-								</a>
-								<a
-									href="https://www.facebook.com/groups/432389500465598"
-									target="_blank"
-								>
-									<i class="fab fa-facebook-square"></i>
-								</a>
-							</div>
-							<div class="flex__item">
-								<div class="flex__center">
-									<div class="flex__subtitle">Номер: 208</div>
-									<div class="flex__subtitle">Назва спеціальності:</div>
-									<h1 class="flex__title">Агроінженерія</h1>
-								</div>
-							</div>
-						</div>
-						<div class="flex__img">
-							<img
-								class="p-auto"
-								src="../../img/addSpecialties/19/1.webp"
-								alt="#"
-							/>
-							<img
-								class="p-auto"
-								src="../../img/addSpecialties/19/2.webp"
-								alt="#"
-							/>
-							<img
-								class="p-auto"
-								src="../../img/addSpecialties/19/3.webp"
-								alt="#"
-							/>
-						</div>
-						<div class="flex__text">
-							Під час навчання за спеціальністю «Агроінженерія» студенти
-							вивчають основи управління підприємствами та способи організації і
-							зниження витрат у аграрному і промисловому виробництвах, сучасні
-							комп’ютерні технології і основи дизайну, 2D і 3D проектування і
-							друк. Близько половини предметів для вивчення студенти обирають
-							самі. Випускники спеціальності «Агроінженерія» мають достатню
-							підготовку для створення власного бізнесу – аграрного,
-							переробного, промислового та іншого виробництва, торгівлі,
-							обслуговування тощо. Крім того, агроінженер може працювати на
-							керівних посадах аграрних, переробних і промислових підприємств,
-							установ, організацій, виконувати функції інженера, дизайнера,
-							механіка, конструктора, постачальника, менеджера з продажу:
-							техніки, запчастин, обладнання, зерна, насіння, добрив, засобів
-							захисту рослин тощо. Стажування і практика на підприємствах Європи
-							не обов’язкова, але доступна для студентів, хто хоче сумістити
-							цікаве і корисне!
-						</div>
-						<div class="flex__center mt-20">
-							<a
-								href="https://forms.gle/v8tCocsAhPQY6aF36"
-								class="custom-btn btn-15 btn--p"
-								>Заповнити форму</a
-							>
-						</div>
+          <button class="burger" type="button" id="navToggle">
+            <span class="burger__item">Menu</span>
+          </button>
+        </div>
+      </div>
+    </header>
+    <div class="container__small">
+      <div class="flex__row">
+        <div class="flex__inner">
+          <div class="flex__cart">
+            <div class="flex__center__row">
+              <div class="flex__item">
+                <a href="https://kntuua.github.io/University/abitur/1.html">
+                  <i class="fas fa-arrow-circle-left"></i>
+                </a>
+                <a href="#popup">
+                  <i class="fas fa-university"></i>
+                </a>
+                <a
+                  href="https://www.facebook.com/groups/432389500465598"
+                  target="_blank"
+                >
+                  <i class="fab fa-facebook-square"></i>
+                </a>
+              </div>
+              <div class="flex__item">
+                <div class="flex__center">
+                  <div class="flex__subtitle">Номер: 208</div>
+                  <div class="flex__subtitle">Назва спеціальності:</div>
+                  <h1 class="flex__title">Агроінженерія</h1>
+                </div>
+              </div>
+            </div>
+            <div class="flex__img">
+              <img
+                class="p-auto"
+                src="../../img/addSpecialties/19/1.webp"
+                alt="#"
+              />
+              <img
+                class="p-auto"
+                src="../../img/addSpecialties/19/2.webp"
+                alt="#"
+              />
+              <img
+                class="p-auto"
+                src="../../img/addSpecialties/19/3.webp"
+                alt="#"
+              />
+            </div>
+            <div class="flex__text">
+              Під час навчання за спеціальністю «Агроінженерія» студенти
+              вивчають основи управління підприємствами та способи організації і
+              зниження витрат у аграрному і промисловому виробництвах, сучасні
+              комп’ютерні технології і основи дизайну, 2D і 3D проектування і
+              друк. Близько половини предметів для вивчення студенти обирають
+              самі. Випускники спеціальності «Агроінженерія» мають достатню
+              підготовку для створення власного бізнесу – аграрного,
+              переробного, промислового та іншого виробництва, торгівлі,
+              обслуговування тощо. Крім того, агроінженер може працювати на
+              керівних посадах аграрних, переробних і промислових підприємств,
+              установ, організацій, виконувати функції інженера, дизайнера,
+              механіка, конструктора, постачальника, менеджера з продажу:
+              техніки, запчастин, обладнання, зерна, насіння, добрив, засобів
+              захисту рослин тощо. Стажування і практика на підприємствах Європи
+              не обов’язкова, але доступна для студентів, хто хоче сумістити
+              цікаве і корисне!
+            </div>
+            <div class="flex__center mt-20">
+              <a
+                href="https://forms.gle/v8tCocsAhPQY6aF36"
+                class="custom-btn btn-15 btn--p"
+                >Заповнити форму</a
+              >
+            </div>
 
-						<div id="popup" class="popup">
-							<a href="#" class="popup__area"></a>
-							<div class="popup__body">
-								<div class="popup__content">
-									<a href="#" class="popup__close"
-										><img
-											class="popup__img"
-											src="../../img/close/close.webp"
-											alt="#"
-									/></a>
-									<div class="popup__title">Посилання на кафедри</div>
-									<a
-										class="popup__link"
-										href="http://sgm.kntu.kr.ua/"
-										target="_blank"
-										>Сільськогосподарського машинобудування</a
-									>
-									<a
-										class="popup__link"
-										href="http://erm.kntu.kr.ua/"
-										target="_blank"
-										>Експлуатація та ремонт машин</a
-									>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<footer class="footer">
-			<div class="container">
-				<div class="footer__inner">
-					<div class="footer__block">
-						<h4 class="footer__title">
-							Приймальна комісія працює щодня, крім суботи та неділі.
-						</h4>
-						<div class="footer__tel">
-							<div>
-								Телефони приймальної комісії: (095) 078-59-00, (0522) 55-93-13
-							</div>
-							<div>
-								Телефон центру довузівської підготовки: (095) 086-24-57 (0522)
-								55-50-18
-							</div>
-						</div>
-					</div>
-					<div class="footer__block">
-						<h4 class="footer__title">«ЦНТУ» в соцмережах:</h4>
-						<a
-							href="https://www.facebook.com/CNTU.kr.ua/?ref=bookmarks"
-							target="_blank"
-							><i class="fab fa-facebook"></i
-						></a>
-						<a href="https://twitter.com/CNTU1929" target="_blank"
-							><i class="fab fa-twitter"></i
-						></a>
-						<a
-							href="https://www.youtube.com/channel/UCOqbluXSF1GpiwkOOWkyydQ"
-							target="_blank"
-							><i class="fab fa-youtube"></i
-						></a>
-						<a href="https://www.instagram.com/cntu.kr.ua/" target="_blank"
-							><i class="fab fa-instagram"></i
-						></a>
-					</div>
-					<div class="footer__block">
-						<h4 class="footer__title">© 2022 «ЦНТУ» Всі права захищено.</h4>
-						<div class="footer__text">
-							<p>
-								Використання матеріалів цього сайту можливе тільки з посиланням
-								на джерело.
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</footer>
+            <div id="popup" class="popup">
+              <a href="#" class="popup__area"></a>
+              <div class="popup__body">
+                <div class="popup__content">
+                  <a href="#" class="popup__close"
+                    ><img
+                      class="popup__img"
+                      src="../../img/close/close.webp"
+                      alt="#"
+                  /></a>
+                  <div class="popup__title">Посилання на кафедри</div>
+                  <a
+                    class="popup__link"
+                    href="http://sgm.kntu.kr.ua/"
+                    target="_blank"
+                    >Сільськогосподарського машинобудування</a
+                  >
+                  <a
+                    class="popup__link"
+                    href="http://erm.kntu.kr.ua/"
+                    target="_blank"
+                    >Експлуатація та ремонт машин</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__inner">
+          <div class="footer__block">
+            <h4 class="footer__title">
+              Приймальна комісія працює щодня, крім суботи та неділі.
+            </h4>
+            <div class="footer__tel">
+              <div>
+                Телефони приймальної комісії: (095) 078-59-00, (0522) 55-93-13
+              </div>
+              <div>
+                Телефон центру довузівської підготовки: (095) 086-24-57 (0522)
+                55-50-18
+              </div>
+            </div>
+          </div>
+          <div class="footer__block">
+            <h4 class="footer__title">«ЦНТУ» в соцмережах:</h4>
+            <a
+              href="https://www.facebook.com/CNTU.kr.ua/?ref=bookmarks"
+              target="_blank"
+              ><i class="fab fa-facebook"></i
+            ></a>
+            <a href="https://twitter.com/CNTU1929" target="_blank"
+              ><i class="fab fa-twitter"></i
+            ></a>
+            <a
+              href="https://www.youtube.com/channel/UCOqbluXSF1GpiwkOOWkyydQ"
+              target="_blank"
+              ><i class="fab fa-youtube"></i
+            ></a>
+            <a href="https://www.instagram.com/cntu.kr.ua/" target="_blank"
+              ><i class="fab fa-instagram"></i
+            ></a>
+          </div>
+          <div class="footer__block">
+            <h4 class="footer__title">
+              © <span class="year"></span> «ЦНТУ» Всі права захищено.
+            </h4>
+            <div class="footer__text">
+              <p>
+                Використання матеріалів цього сайту можливе тільки з посиланням
+                на джерело.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
-		<script src="../../js/app.js"></script>
-		<script
-			src="https://kit.fontawesome.com/021c6d66dc.js"
-			crossorigin="anonymous"
-		></script>
-	</body>
+    <script src="../../js/app.js"></script>
+    <script
+      src="https://kit.fontawesome.com/021c6d66dc.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
