Small fix renamed specialties

--- a/special/higher/5.html
+++ b/special/higher/5.html
@@ -111,9 +111,9 @@
               оцінки фінансового стану, бюджетування, прогнозування, контролю
               над витрачанням і надходженнями грошових коштів, ефективного
               управління прибутком і рентабельністю та захисту заощаджень. Під
-              час навчання за спеціальністю 072 «Фінанси, банківська справа та
-              страхування» здобувачі розвивають такі особисті якості:
-              організованість та системність; стратегічне, глобальне та
+              час навчання за спеціальністю 072 «Фінанси, банківська справа,
+              страхування та фондовий ринок» здобувачі розвивають такі особисті
+              якості: організованість та системність; стратегічне, глобальне та
               неординарне мислення; високу вмотивованість на результат;
               лідерство; стресостійкість; відповідальність Навчання за
               спеціальністю 072 «Фінанси, банківська справа, страхування та
@@ -128,11 +128,12 @@
               контроль за використанням фінансових ресурсів, обчисленням та
               сплатою податків; забезпечувати здійснення операцій на товарній,
               фондовій та валютній біржах; здійснювати науково-дослідну роботу у
-              сфері фінансів. ТОП 5 переваг спеціальності «Фінанси, банківських
-              справ та страхування»: широкі можливості працевлаштування;
-              достойний заробіток; елітарність; високий статус у суспільстві та
-              можливість реалізації своїх фахових компетентностей; можливості
-              побудови достойної професійної кар’єри.
+              сфері фінансів. ТОП 5 переваг спеціальності «Фінанси, банківська
+              справа, страхування та фондовий ринок»: широкі можливості
+              працевлаштування; достойний заробіток; елітарність; високий статус
+              у суспільстві та можливість реалізації своїх фахових
+              компетентностей; можливості побудови достойної професійної
+              кар’єри.
             </div>
             <div class="flex__center mt-20">
               <a
