--- a/applicant/bachelor.html
+++ b/applicant/bachelor.html
@@ -13,10 +13,10 @@
       <div class="container">
         <div class="header__inner">
           <div class="header__logo">
-            <a href="http://www.kntu.kr.ua/"
+            <a href="https://kntuua.github.io/University/"
               ><img src="../img/Gerb.webp" alt="#"
             /></a>
-            <a href="http://www.kntu.kr.ua/">
+            <a href="https://kntuua.github.io/University/">
               <h1 class="header__title">
                 Центральноукраїнський національний <br />
                 технічний університет
