modified:   index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="flex__row">
         <div class="flex__inner w--100">
           <div class="flex__cart">
-            <h1 class="flex__title fz--color">Вибір спеціальності</h1>
+            <h1 class="flex__title fz--color">Сторінка абітурієнта</h1>
             <div class="card__inner">
               <div class="card__item">
                 <div class="price__card">
