Added a new specialty Electronic Communications and Radio Engineering

--- a/applicant/bachelor.html
+++ b/applicant/bachelor.html
@@ -418,6 +418,25 @@
           <div class="priceСard">
             <img
               class="img-card img-fluid"
+              src="../img/specialties/25.webp"
+              alt="#"
+            />
+            <div class="card-h">
+              <p class="cart-text">172</p>
+              <p class="cart-text">Електронні комунікації та радіотехніка</p>
+              <p class="cart-text cart--color">Випускова кафедра</p>
+              <p class="cart-text">Кібербезпеки та програмного забезпечення</p>
+            </div>
+            <a href="../specialties/bachelor/172.html" class="btn">
+              Дізнатись більше
+            </a>
+          </div>
+        </div>
+
+        <div class="card-item">
+          <div class="priceСard">
+            <img
+              class="img-card img-fluid"
               src="../img/specialties/16.webp"
               alt="#"
             />
