--- a/specialties/master/132.html
+++ b/specialties/master/132.html
@@ -103,50 +103,40 @@
               />
             </div>
             <div class="flex__text">
-              Під час навчання за спеціальністю 132 «Матеріалознавство» майбутні
-              фахівці набувають комплекс умінь та знань, який дозволяє:
-              реалізовувати технології створення й застосування нових матеріалів
-              та покриттів; досліджувати вплив умов отримання та різноманітних
-              факторів (температури, тиску, опромінювання, зовнішнього
-              середовища тощо) на їх структуру, фізичні, хімічні, технологічні,
-              експлуатаційні та інші властивості та характеристики;
-              застосовувати методи управління властивостями матеріалів на основі
-              уявлень з теоретичної механіки, фізики та хімії твердого тіла,
-              структурного аналізу, фазових перетворень, теплового впливу,
-              легування, поверхневих та капілярних явищ при створенні матеріалів
-              та покриттів із необхідним комплексом експлуатаційних
-              характеристик, що характеризуються комплексністю та невизначеністю
-              умов із застосуванням методів фізики, хімії та механічної
-              інженерії. Випускники спеціальності 132 «Матеріалознавство»
-              отримують навички розв’язання складних спеціалізованих задач та
-              практичних проблем під час професійної діяльності у галузі
-              механічної інженерії та можуть працювати на на підприємствах
-              будь-якої організаційно-правої форми (комерційні, некомерційні,
-              державні, муніципальні) усіх форм власності для реалізації
-              адміністративної та управлінської діяльності, пов'язаної із
-              розробкою, застосуванням, виробництвом, обробкою та випробуванням
-              металевих, неметалевих композиційних та функціональних матеріалів
-              та виробів на їх основі, обіймаючи посади: бригадира на дільницях
-              основного виробництва, головного технолога, головного інженера,
-              директора з матеріально-технічного постачання, технічного
-              директора, завідувача лабораторії, завідувача майстерні,
-              контролера режимів роботи технологічного устаткування, техніка
-              (майстра) з експлуатації та ремонту машин і механізмів, майстра з
-              ремонту технологічного устаткування та транспорту, начальника
-              виробничого або ремонтного цеху, техніка-технолога із
-              матеріалознавства та зварювання, техніка з підготовки технічної
-              документації та інших. Підготовка фахівців передбачає поглиблене
-              вивчення мов, постійну апробацію своїх знань та навичок на
-              конференціях, а також під час стажування та проходження виробничих
-              практик як на провідних підприємствах регіону так й підприємствах
-              Євросоюзу (за бажанням здобувача). Стабільно високий попит на
-              фахівців з матеріалознавства на ринку праці надає фахівцям широкі
-              можливості для працевлаштування та побудови кар’єри й гарантує
-              високий рівень оплати праці!
+              Спеціальність «Матеріалознавство. Прикладне матеріалознавство та
+              інжиніринг» є однією з основ сучасного машинобудування. Під час
+              навчання студенти вивчають природу походження матеріалів, методи
+              виробництва унікальних матеріалів з особливими властивостями
+              використовуючи новітні технології та наноматеріали, хімічних та
+              фізичних властивостей, а також методи та прилади контролю,
+              випробування та методи управління їхніми властивостями. Опановують
+              принципи виробництва. Набувають умінь та навичок прогнозувати
+              ресурс роботи матеріалів та деталей машин і механізмів, які
+              працюють в різних умовах. Здобувачі виконують роботи з
+              комп'ютерного проектування технології виготовлення деталей машин
+              та зварних конструкцій, навчаються розробляти інноваційні
+              технологічні процеси виготовлення та обробки, освоюють комп'ютерні
+              методи їх управління, що становлять основу сучасного
+              машинобудування. Інженери-матеріалознавці визначають оптимальний
+              вибір металевих та неметалічних матеріалів, технологію
+              виготовлення деталей їх надійність та довговічність при
+              експлуатації машин і механізмів та будівельних конструкцій.
+              З'ясовують та усувають причини виходу з ладу механізмів та
+              пристроїв, надають рекомендацію підвищення їхньої надійності та
+              довговічності. Інжиніринг являє собою надання
+              матеріалознавчо-інженерних послуг та консультацій, що забезпечує
+              безперебійний виробничий процес та продаж продукції підприємства.
+              Фахівці можуть виконувати проектування та конструкторську розробку
+              машин та обладнання, установок, приладів, виробів. Займаються
+              розробкою матеріалів та сплавів, проведення їх випробувань,
+              пусконалагоджувальними роботами та іншого порядку. Фахівці
+              інженери-матеріалознавці знаходять гідне застосування своїм
+              знанням у багатьох сучасних промислових, навчальних та наукових
+              організаціях та мають підвищений попит.
             </div>
             <div class="flex__center mt-20">
               <a
-                href="https://docs.google.com/forms/d/e/1FAIpQLSdH_EhxuNBsJdBYImVzLmuz0dy8IPY91bazBOkojUzmvGHOsg/viewform?usp=sf_link"
+                href="https://docs.google.com/forms/d/16QxsbjWif0_9WdTB7SS_TzB6TtllFrsGx-Ft-_FDQAY/edit"
                 class="custom-btn btn-15 btn--p"
                 >Заповнити форму</a
               >
