Changed the name of the department 132

--- a/applicant/bachelor.html
+++ b/applicant/bachelor.html
@@ -354,7 +354,9 @@
               <p class="cart-text">132</p>
               <p class="cart-text">Матеріалознавство</p>
               <p class="cart-text cart--color">Випускова кафедра</p>
-              <p class="cart-text">Експлуатації та ремонту машин</p>
+              <p class="cart-text">
+                Кафедра матеріалознавства та ливарного виробництва
+              </p>
             </div>
             <a href="../specialties/bachelor/132.html" class="btn">
               Дізнатись більше
