--- a/applicant/master.html
+++ b/applicant/master.html
@@ -339,7 +339,9 @@
               <p class="cart-text">132</p>
               <p class="cart-text">Матеріалознавство</p>
               <p class="cart-text cart--color">Випускова кафедра</p>
-              <p class="cart-text">Експлуатації та ремонту машин</p>
+              <p class="cart-text">
+                Кафедра матеріалознавства та ливарного виробництва
+              </p>
             </div>
             <a href="../specialties/master/132.html" class="btn">
               Дізнатись більше
